# todo-haiku

./: .env.example  .gitignore  Planning.md  README.md  package-lock.json  package.json  tailwind.config.js  test-syllable-counter.js  tsconfig.json  vite.config.ts
ml/: .gitignore  README.md  README_BALANCED_MODEL.md  README_CHAR_LSTM_MODEL.md  README_CMU_MODEL.md  README_IMPROVED_MODEL.md  pyproject.toml  requirements.txt  test_import.py  train_and_deploy_balanced_model.bat  train_and_deploy_balanced_model.sh  train_and_deploy_char_lstm.bat  train_and_deploy_char_lstm.sh  train_and_deploy_cmu_model.bat  train_and_deploy_cmu_model.sh  train_and_deploy_decision_tree.sh  train_and_deploy_improved_model.bat  train_and_deploy_improved_model.sh
ml/models/: char_vocab.json  char_vocab_cmu.json  model_metadata.json  model_metadata_cmu.json  model_metadata_cmu_improved.json
ml/scripts/: analyze_dataset.py  analyze_syllables.py  check_paths.py  cmu_syllable_counter.py  convert_balanced_to_onnx.py  convert_char_lstm_to_onnx.py  convert_cmu_to_onnx.py  convert_decision_tree_to_js.py  convert_improved_to_onnx.py  convert_to_onnx.py  convert_to_tfjs.py  download_cmudict.py  download_kaggle_dataset.py  evaluate.py  evaluate_balanced.py  interactive_test.py  interactive_test_balanced.py  interactive_test_char_lstm.py  interactive_test_cmu.py  interactive_test_improved.py  optimized_cmu_counter.py  setup_env.py  simple_test.py  simple_train.py  test_cmu_counter.py  test_decision_tree.py  test_optimized_counter.py  train.py  train_balanced.py  train_char_lstm.py  train_cmu.py  train_cmu_improved.py  train_decision_tree.py  train_kaggle.py  update_web_app.py  update_web_app_char_lstm.py  update_web_app_cmu.py  update_web_app_improved.py  validate_dataset.py
ml/src/: __init__.py
ml/src/evaluation/: __init__.py
ml/src/preprocessing/: __init__.py  kaggle_loader.py
ml/src/training/: __init__.py
ml/syllable_counter/: __init__.py
ml/syllable_counter/evaluation/: __init__.py
ml/syllable_counter/preprocessing/: __init__.py  data_loader.py  kaggle_loader.py
ml/syllable_counter/training/: __init__.py  model.py
models/: simple_char_vocab.json  simple_model_metadata.json  simple_syllable_model.onnx  simple_syllable_model.pt
public/: manifest.json  test-model.html
scripts/: setup-supabase.js  update-dependencies.js
src/: entry.dev.tsx  entry.preview.tsx  root.tsx
supabase/: config.toml  seed.sql
todo_haiku/big-phoney-api/: .dockerignore  Dockerfile  README.md  deploy.bat  deploy.sh  dev-setup.bat  fly.toml  main.py  pyproject.toml  requirements.txt  test.py
todo_haiku/syllable-api/: README.md  deploy.bat  deploy.sh  dev-setup.sh  fly.toml  main.py  onnx_syllable_counter.py  pyproject.toml  syllable_model.onnx  test.py
(+152 files in other folders)
