[project]
name = "syllable-api"
version = "2.0.0"
description = "FastAPI microservice for syllable counting using ONNX model with CMU dictionary fallback"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "onnxruntime>=1.22.1",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-asyncio", 
    "httpx"
]
